k8s/echoheaders.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoheaders
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment: echoheaders
    spec:
      containers:
      - name: echoheaders
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoheaders
spec:
  type: ClusterIP
  selector:
    deployment: echoheaders
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoheaders
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: echoheaders.blue.sunsparks.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: echoheaders
          servicePort: 80
