k8s/traefik.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik
        args:
        - --web
        - --kubernetes
        - --configfile=/config/config
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    deployment: traefik
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
spec:
  selector:
    deployment: traefik
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.blue.sunsparks.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ui
          servicePort: 80
---
